--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 </head>
 <body>
     <header>
+        <nav id="menu">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#"></a>Skills</li>
+                <li><a href="#"></a>Formação</li>
+                <li><a href="#"></a>Projetos</li>
+                <li><a href="#"></a>Tema</li>
+            </ul>
+        </nav>
 
     </header>
 
