--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <nav id="menu">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#"></a>Skills</li>
-                <li><a href="#"></a>Formação</li>
-                <li><a href="#"></a>Projetos</li>
-                <li><a href="#"></a>Tema</li>
+                <li><a href="#">Skills</a></li>
+                <li><a href="#">Formação</a></li>
+                <li><a href="#">Projetos</a></li>
+                <li><a href="#">Tema</a></li>
             </ul>
         </nav>
 
